Showing subject category in card [Issue: #206]

--- a/courses/templates/course/view.html
+++ b/courses/templates/course/view.html
@@ -173,6 +173,9 @@
             <p><b>{% trans "Professor" %}: </b>{% for professor in subject.professors.all %}{% if not forloop.first %},{% endif %}
               {{professor}}{% if forloop.last %}.{% endif %}{% endfor %}</p>
               <p>
+                <b>{% trans 'Category' %}: </b><i>{{ subject.category }}</i>
+              </p>
+              <p>
                 <b>{% trans "Description" %}: </b>
                 <i>
                   {{subject.description}}
