--- a/courses/templates/course/index.html
+++ b/courses/templates/course/index.html
@@ -104,5 +104,26 @@
             {% trans 'No courses found' %}
         {% endif %}
     </div>
+        <div class="col-md-12">
+        <nav aria-label="Page navigation">
+            <ul class="pagination">
+                {% if page_obj.has_previous %}
+                    <li>
+                        <a href="?page={{ page_obj.previous_page_number }}"><span><<</span></a>
+                    </li>
+                {% endif %}
+                {% for page_number in paginator.page_range %}
+                    <li{% if page_obj.number == page_number %} class="active"{% endif %}>
+                        <a href="?page={{ page_number }}">{{ page_number }}</a>
+                    </li>
+                {% endfor %}
+                {% if page_obj.has_next %}
+                    <li>
+                        <a href="?page={{ page_obj.next_page_number }}"><span>>></span></a>
+                    </li>
+                {% endif %}
+            </ul>
+        </nav>
+    </div>
     <script type="text/javascript" src="{% static 'js/course.js' %}"></script>
 {% endblock %}
