--- a/users/templates/users/update.html
+++ b/users/templates/users/update.html
@@ -36,10 +36,10 @@
 							{% if field.auto_id == 'id_birth_date' %}
 								<input type="text" class="form-control date-picker"name="{{field.name}}" value="{% if field.value.year %}{{field.value|date:'m/d/Y'}}{% else %}{{field.value}}{% endif %}" min="{{now|date:'m/d/Y'}}" id="{{ field.auto_id }}">
 								<span id="helpBlock" class="help-block">{{ field.help_text }}</span>
-							{% elif field.auto_id == 'id_image' %}
+							{% elif field.auto_id == 'id_image'  or field.auto_id == 'id_curriculum'%}
 								{% render_field field class='form-control input-sm' %}
 								<div class="input-group">
-				                    <input type="text" readonly="" class="form-control" placeholder="{% trans 'Choose your photo...' %}">
+				                    <input type="text" readonly="" class="form-control" placeholder="{% trans 'Choose your file...' %}">
 				                    <span class="input-group-btn input-group-sm">
 				                        <button type="button" class="btn btn-fab btn-fab-mini">
 				                          	<i class="material-icons">attach_file</i>
