--- a/users/templates/users/edit_profile.html
+++ b/users/templates/users/edit_profile.html
@@ -76,7 +76,7 @@
 								{% endif %}
 							{% endif %}
 							{% if field.errors %}
-								<div class="alert alert-danger alert-dismissible col-md-offset-4 col-md-8" role="alert">
+								<div class="alert alert-danger alert-dismissible" role="alert">
 				  					<button type="button" class="close" data-dismiss="alert" aria-label="Close">
 				  						<span aria-hidden="true">&times;</span>
 			  						</button>
