--- a/courses/templates/subject/form_view_teacher.html
+++ b/courses/templates/subject/form_view_teacher.html
@@ -93,7 +93,7 @@
         </div>
         <div class="form-group">
           <label class="control-label" for="focusedInput2">{% trans 'Description' %}</label>
-          <textarea class="form-control" rows="3" id="textArea" value="{{topic.description|linebreaks}}"></textarea>
+          <textarea class="form-control" rows="3" id="textArea">{{topic.description}}</textarea>
         </div>
         <div class="row">
           <div class=" col-xs-6 col-md-4">
