--- a/poll/templates/poll/create.html
+++ b/poll/templates/poll/create.html
@@ -99,7 +99,7 @@
         <div class="row form-group {% if form.has_error %} has-error {% endif %}">
           <label for="{{ form.limit_date.auto_id }}">{{ form.limit_date.label }}</label>
           {# {% render_field  form.limit_date class="form-control" form="form"%} #}
-          <input form="form" class="form-control" type="date" name="{{form.limit_date.name}}" {% if form.limit_date.value != None %}value="{% if form.limit_date.value.year %}{{form.limit_date.value|date:'Y-m-d'}}{% else %}{{form.limit_date.value}}{% endif %}"{% endif %}>
+          <input form="form" class="form-control" type="date" name="{{form.limit_date.name}}" {% if form.limit_date.value != None %}value="{{form.limit_date.value|date:'SHORT_DATE_FORMAT'}}"{% endif %}>
           {% if form.limit_date.errors %}
           <div class="not_submited">
           </br>
