--- a/courses/templates/course/update.html
+++ b/courses/templates/course/update.html
@@ -18,7 +18,7 @@
 				<div class="form-group {% if form.has_error %} has-error {% endif %} is-fileinput">
 					<label for="{{ field.auto_id }}">{{ field.label }}</label>
 					{% if field.auto_id == 'id_init_register_date' or field.auto_id == 'id_end_register_date' or field.auto_id == 'id_init_date' or field.auto_id == 'id_end_date'%}
-						<input type="date" class="form-control"name="{{field.name}}" value="{% if field.value.year %}{{field.value|date:'Y-m-d'}}{% else %}{{field.value}}{% endif %}" min="{{now|date:'Y-m-d'}}">
+						<input type="text" class="form-control date-picker" name="{{field.name}}" value="{{field.value|date:'SHORT_DATE_FORMAT'}}" min="{{now|date:'SHORT_DATE_FORMAT'}}">
 					{% elif field.auto_id == 'id_image' %}
 						{% render_field field class='form-control' %}
 						<div class="input-group">
