--- a/core/templates/guest.html
+++ b/core/templates/guest.html
@@ -81,6 +81,7 @@
                </li>
              			<li  data-toggle="tooltip" data-placement="bottom" title data-original-title="{% trans 'messages' %}"> <a href="#"><i class="fa fa-comments" aria-hidden="true"></i></a> </li>
              			<li > <a  class="link" href="{% url 'app:index' %}">{{ user }}</a></li>
+                        <li data-toggle="tooltip" data-placement="bottom" title data-original-title="log out"> <a href="{% url 'app:index' %}"><i class="fa fa-sign-out" aria-hidden="true"></i></a></li>
            		</ul>
          		</div>
    	</div>
