--- a/forum/templates/forum/forum_form.html
+++ b/forum/templates/forum/forum_form.html
@@ -8,6 +8,7 @@
 			{% if field.field.widget.input_type == 'hidden' %}
 	            {% render_field field class='form-control' %}
            	{% elif field.auto_id == 'id_limit_date' %}
+           		<label for="{{ field.auto_id }}">{{ field.label }}</label>
            		<input type="text" class="form-control date-picker"name="{{field.name}}" value="{{field.value|date:'SHORT_DATE_FORMAT'}}" id="{{ field.auto_id }}">
 				<span id="helpBlock" class="help-block">{{ field.help_text }}</span>
 	        {% else %}
