fixing some details in lista category

--- a/courses/templates/category/index.html
+++ b/courses/templates/category/index.html
@@ -72,7 +72,7 @@
 					    <div class="panel-heading" role="tab">
 					      <div class="row">
 					        <div class="col-xs-9 col-md-10 titleTopic">
-					          <h4 style="color:white">{{category}}</h4>
+					          <h4 style="color:white; margin-left: 20px;">{{category}}</h4>
 					        </div>
 					        
 						        <div class="col-xs-4 col-md-2" id="divMoreActions">
