--- a/courses/templates/course/index.html
+++ b/courses/templates/course/index.html
@@ -77,7 +77,7 @@
           <input type="text" class="form-control" placeholder="Search Courses" name="q"></div>
             <span class="input-group-btn input-group-sm">
               <button type="submit" class="btn btn-fab btn-fab-mini">
-                <i class="material-icons">{% trans 'Search' %}</i>
+                <i class="fa fa-search" aria-hidden="true"></i>
               </button>
             </span>
         </div>
