Link image included [Issue:#182]

--- a/links/templates/links/view_link.html
+++ b/links/templates/links/view_link.html
@@ -10,7 +10,7 @@
       <div class="modal-body">
         <!-- Card -->
         <article class="card animated fadeInLeft">
-          <img class="card-img-top img-responsive" src="https://www.python.org/static/opengraph-icon-200x200.png" align="left">
+          <img class="card-img-top img-responsive" src="{{ link.image.url}}" width="200" height="200"  align="left">
            <div class="card-block">
               <b class="card-title">{{link.name}}</b><p></p>
               <p class="card-text"> </p><p>{{link.link_description}}</p>
