Refactoring internacionalization [Issue #223]

--- a/links/templates/links/update_link.html
+++ b/links/templates/links/update_link.html
@@ -18,7 +18,7 @@
           <input value="https://www.python.org/" type="text" class="form-control" id="inputDefault">
         </div>
         <div class="form-group is-empty">
-          <label class="control-label" for="inputDefault">{% trans 'Descrição' %}</label>
+          <label class="control-label" for="inputDefault">{% trans 'Description' %}</label>
           <textarea class="form-control" rows="3"></textarea>
         </div>
         <div class="form-group">
