--- a/courses/templates/subject/form_view_teacher.html
+++ b/courses/templates/subject/form_view_teacher.html
@@ -16,7 +16,7 @@
         <a role="button">
           <h4>{{topic}}</h4>
         </a>
-      </div><!--column-->
+      </div><!--column -->
       <div class="col-xs-3 col-md-2 divMoreActions">
         <div class="btn-group">
           <button type="button" class="btn btn-default btn-sm eye" data-toggle="tooltip" data-placement="bottom" title="Visible">
@@ -31,7 +31,7 @@
           {% if dropdown_topic %}
           <ul class="dropdown-menu pull-right" aria-labelledby="moreActions">
             <li><a href="javascript:void(0)" data-toggle="modal" data-target="#myModal4"><i class="fa fa-files-o fa-fw" aria-hidden="true"></i>&nbsp; {% trans "Replicate" %}</a></li>
-            <li><a href="javascript:void(0)" class="edit_card"><i class="fa fa-pencil fa-fw" aria-hidden="true"></i>&nbsp; {% trans "Edit" %}</a></li>
+            <li><a href="javascript:show_editation('{{topic.slug}}')"><i class="fa fa-pencil fa-fw" aria-hidden="true"></i>&nbsp; {% trans "Edit" %}</a></li>
             <li><a href="javascript:void(0)" data-toggle="modal" data-target="#removeTopic"><i class="fa fa-trash fa-fw" aria-hidden="true"></i>&nbsp; {% trans "Remove" %}</a></li>
           </ul>
           {% endif %}
@@ -41,7 +41,7 @@
   </div>
   <div class="panel-collapse collapseTopic-{{topic.slug}} collapse in" role="tabpanel" aria-labelledby="heading_{{topic.id}}" aria-expanded="true" aria-hidden="false">
     <div class="panel-body">
-      <div class="presentation">
+      <div class="presentation" id="presentation_{{topic.slug}}">
         <p>
           <i>
             {{topic.description|linebreaks}}
@@ -86,7 +86,7 @@
           </div>
         </div>
       </div><!--EndPresentation-->
-      <div class="editation">
+      <div class="editation" id="editation_{{topic.slug}}">
         <div class="form-group">
           <label class="control-label" for="focusedInput2">{% trans 'Name Topic' %}</label>
           <input type="text" class="form-control" value="{{topic}}">
@@ -135,8 +135,8 @@
         </div>
         <div class="form-group">
           <div class="col-md-10">
-            <button type="button" class="btn btn-raised btn-default edit_card_end">{% trans 'Cancel' %}</button>
-            <button type="submit" class="btn btn-raised btn-primary edit_card_end">{% trans 'Submit' %}</button>
+            <a href="javascript:show_presentation('{{topic.slug}}')" class="btn btn-raised btn-default">{% trans 'Cancel' %}</a>
+            <a href="javascript:show_presentation('{{topic.slug}}')" class="btn btn-raised btn-primary">{% trans 'Submit' %}</a>
           </div>
         </div>
       </div><!--EndEditation-->
