--- a/courses/templates/topic/link_topic_list_edit.html
+++ b/courses/templates/topic/link_topic_list_edit.html
@@ -2,8 +2,12 @@
 <div id="list-topic{{ topic.id }}-links-edit">
 {% for link in links%}
 
-        <li class="icon_edit_remove"> <a href="#" data-toggle="modal" data-target="#linksModalEdit"><i class="fa fa-pencil fa-lg" aria-hidden="true"></i></a>  <a href="#" data-toggle="modal" data-target="#removeLink"><i class="fa fa-trash fa-lg" aria-hidden="true"></i></a></li>
-        <li><i class="fa fa-link" aria-hidden="true"></i>  <a href="javascript:get_modal_link('{% url 'course:links:view_link' link.slug %}', '#viewLinkModal','#divModalLink')">{{link}}</a></li>
+        <li class="icon_edit_remove"> <a href="javascript:get_modal_link('{% url 'course:links:update_link' link.slug %}', '#linksModalEdit', '#divModalLinkUpdate')"><i class="fa fa-pencil fa-lg" aria-hidden="true"></i></a>  <a href="#" data-toggle="modal" data-target="#removeLink"><i class="fa fa-trash fa-lg" aria-hidden="true"></i></a></li>
+        <li id="link_edit_{{ link.slug }}"><i class="fa fa-link" aria-hidden="true"></i>  <a href="javascript:get_modal_link('{% url 'course:links:view_link' link.slug %}', '#viewLinkModal','#divModalLink')">{{link}}</a></li>
 
 {% endfor %}
+</div>
+
+<div class="row" id="divModalLinkUpdate">
+
 </div>
