--- a/courses/templates/topic/link_topic_list.html
+++ b/courses/templates/topic/link_topic_list.html
@@ -1,7 +1,7 @@
 {% load static i18n list_topic_foruns permission_tags %}
 <div id="list-topic{{ topic.id }}-links">
 {% for link in links%}
-        <li><i class="fa fa-link" aria-hidden="true"></i>  <a href="javascript:get_modal_link('{% url 'course:links:view_link' link.slug %}', '#viewLinkModal','#divModalLink')">{{link}}</a></li>
+        <li id = "link_{{ link.slug }}"><i class="fa fa-link" aria-hidden="true"></i>  <a href="javascript:get_modal_link('{% url 'course:links:view_link' link.slug %}', '#viewLinkModal','#divModalLink')">{{link}}</a></li>
 {% endfor %}
 </div>
 <div class = 'row' id ="divModalLink">
