Included id to update link [Issue:#122]

--- a/links/templates/links/render_link.html
+++ b/links/templates/links/render_link.html
@@ -1,1 +1,1 @@
-<li><i class="fa fa-link" aria-hidden="true"></i>  <a href="javascript:get_modal_link('{% url 'course:links:view_link' link.slug %}', '#viewLinkModal','#divModalLink')">{{link}}</a></li>
+<li id="link_edit_{{ link.slug }}"><i class="fa fa-link" aria-hidden="true"></i>  <a href="javascript:get_modal_link('{% url 'course:links:view_link' link.slug %}', '#viewLinkModal','#divModalLink')">{{link}}</a></li>
