Fixed the import js of the links [Issue:#126]

--- a/courses/templates/subject/form_view_teacher.html
+++ b/courses/templates/subject/form_view_teacher.html
@@ -4,7 +4,7 @@
    <script type="text/javascript" src="{% static 'js/forum.js' %}"></script>
    <script src="{% static 'js/file.js' %}"></script>
    <script type="text/javascript" src="{% static 'js/material.js' %}"></script>
-   <script type = "text/javascript" src="{% static 'links.js' %}"></script>
+   <script type = "text/javascript" src="{% static 'js/links.js' %}"></script>
 {% endblock %}
 <div class="panel panel-default cards-detail">
   <div class="panel-heading topic">
@@ -140,7 +140,7 @@
           </div>
         </div>
       </div><!--EndEditation-->
-      
+
     </div>
   </div>
 </div>
