Fixed js source [Issue:#126]

--- a/links/templates/links/create_link.html
+++ b/links/templates/links/create_link.html
@@ -43,7 +43,7 @@
 </div>
 <!-- EndModal -->
 {% block script_link %}
-    {# // <script src="{% static '/links.js' %}"></script> #}
+    {# // <script src="{% static 'js/links.js' %}"></script> #}
     <script type="text/javascript">
       $("#form-link").submit(function(event) {
             var data = new FormData($('#form-link').get(0));
